CAUSEWAY-4036: properly infer max total digits